Issue #13503: Use a more efficient reduction format for bytearrays with pickle protocol >= 3.  The old reduction format is kept with older protocols in order to allow unpickling under Python 2.

Patch by Irmen de Jong.